# NetTransfer

./: .gitignore  CMakeCache.txt  CMakeLists.txt  README.md  TODO.md  app.rc  resources.qrc
include/: NetTransfer.h  NetTransferBridge.h  discovery.h  mainWindow.h  protocol.h  transfer.h
src/: launcher.cpp  main.cpp  main_gui.cpp  resources.qrc  uninstall_rules.cpp
src/core/: NetTransfer.cpp  discovery.cpp  protocol.cpp  transfer.cpp
src/gui/: NetTransferBridge.cpp  mainWindow.cpp
